# rust-sudoku

./: Cargo.toml  README.md
.github/workflows/: deployment.yml
puzzle/: sudoku1.txt  sudoku2.txt  sudoku3.txt  sudoku4.txt  sudoku5.txt  sudoku6.txt  sudoku7.txt
src/: cli.rs  lib.rs  main.rs
