[package]
name = "rust-sudoku"
version = "0.2.0"
edition = "2021"
description = "Command line sudoku solver."
keywords = ["sudoku", "cli"]
license = "MIT"
documentation = "https://docs.rs/rust-sudoku"
homepage = "https://github.com/BeaconBrigade/rust-sudoku"
repository = "https://github.com/BeaconBrigade/rust-sudoku.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bpaf = { version = "0.6.1", features = ["derive"] }
